# HACK25

./: .gitignore  CMakeLists.txt  main.cpp  test.md  test2.md  test3.md
AI/include/: PromptGenerator.h
AI/src/: PromptGenerator.cpp
Controller/include/: Controller.h  Music_Manager.h  Sound_Manager.h
Controller/src/: Controller.cpp  Music_Manager.cpp  Sound_Manager.cpp
Model/include/: AI.h  Model.h  Player.h  Player_Data_Manager.h
Model/src/: AI.cpp  Model.cpp  Player.cpp  Player_Data_Manager.cpp
View/include/: View.h
View/src/: View.cpp
test/: README.md
